--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,10 +3,10 @@ name: Build Multi-Arch Docker Images
 on:
   push:
     tags:
-      - '*'
+      - "*"
 
 env:
-  IMAGE_NAME: swoole-workspace
+  IMAGE_NAME: ${{ secrets.DOCKER_USERNAME }}/swoole-workspace
 
 jobs:
   build:
@@ -18,23 +18,18 @@ jobs:
           - name: Base
             context: ./Base
             dockerfile: Dockerfile
-            image: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}
           - name: Web
             context: ./Web
             dockerfile: Dockerfile
-            image: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}
           - name: Worker
             context: ./Worker
             dockerfile: Dockerfile
-            image: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}
           - name: CI
             context: ./CI
             dockerfile: Dockerfile
-            image: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}
           - name: Dev
             context: ./Dev
             dockerfile: Dockerfile
-            image: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}
 
     steps:
       - name: Checkout code
@@ -67,7 +62,7 @@ jobs:
           dockerfile: ${{ matrix.environment.dockerfile }}
           push: true
           tags: |
-            ${{ matrix.environment.image }}:${{ steps.extract_tag.outputs.tag }}-${{ steps.convert_to_lowercase.outputs.env_lowercase }}
+            ${{ env.IMAGE_NAME }}:${{ steps.extract_tag.outputs.tag }}-${{ steps.convert_to_lowercase.outputs.env_lowercase }}
           environments: linux/amd64,linux/arm64
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
