--- a/Base/Dockerfile
+++ b/Base/Dockerfile
@@ -1,11 +1,13 @@
-ARG PHP_DOCKER_TAG=8.3.7-cli-alpine3.20
+ARG PHP_DOCKER_TAG=8.3.11-cli-alpine3.20
 
 FROM php:${PHP_DOCKER_TAG}
 
-ARG DOCKER_PHP_EXT_INSTALLER_VER=2.2.14
-ARG PHP_EXT_GRPC_VER=1.64.1
-ARG PHP_EXT_SWOOLE_VER=5.1.2
-ARG PHP_EXT_PROTOBUF_VER=4.27.0
+LABEL maintainer="dev_kore@frontiir.net"
+
+ARG DOCKER_PHP_EXT_INSTALLER_VER=2.5.0
+ARG PHP_EXT_GRPC_VER=1.66.0
+ARG PHP_EXT_SWOOLE_VER=5.1.4
+ARG PHP_EXT_PROTOBUF_VER=4.27.5
 ARG PHP_EXT_RDKAFKA_VER=6.0.3
 ARG PHP_EXT_REDIS_VERSION=6.0.2
 
