--- a/Dev/Dockerfile
+++ b/Dev/Dockerfile
@@ -1,11 +1,11 @@
 ARG BASE_IMG_NAME=cragonnyunt/swoole-workspace
 
-ARG BASE_IMG_VER=8.3.11-worker
+ARG BASE_IMG_VER=8.4.1-worker
 
 FROM $BASE_IMG_NAME:$BASE_IMG_VER
 
-ARG DOCKER_PHP_EXT_INSTALLER_VER=2.5.0
-ARG COMPOSER_VER=2.7.9
+ARG DOCKER_PHP_EXT_INSTALLER_VER=2.6.4
+ARG COMPOSER_VER=2.8.3
 
 ARG WORKSPACE_USER=kore
 
@@ -51,7 +51,7 @@ RUN sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master
     && sh -c 'curl -fLo "${XDG_DATA_HOME:-$HOME/.local/share}"/nvim/site/autoload/plug.vim --create-dirs \
        https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim'
 
-RUN echo "exec tmux" > /home/${WORKSPACE_USER}/.profile
+RUN echo 'if [ -n "$TMUX" ]; then exit 0; fi; SESH="kore"; tmux has-session -t $SESH 2>/dev/null; if [ $? != 0 ]; then tmux new-session -d -s $SESH; fi; exec tmux attach-session -t $SESH' > /home/${WORKSPACE_USER}/.profile
 
 ENV ENV=/home/${WORKSPACE_USER}/.profile
 
