--- a/Dev/tmux/tmux.conf
+++ b/Dev/tmux/tmux.conf
@@ -1,4 +1,8 @@
 set-option -g default-shell /bin/zsh
+set-option -g remain-on-exit off
+set-option -g destroy-unattached on
+set-option -g idle-time 60
+
 set-window-option -g mode-keys vi
 
 set -g default-terminal xterm-256color
