Update Dev Dockerfile

--- a/Dev/Dockerfile
+++ b/Dev/Dockerfile
@@ -1,11 +1,12 @@
 ARG BASE_IMG_NAME=cragonnyunt/swoole-workspace
 
-ARG BASE_IMG_VER=8.4.1-worker
+ARG BASE_IMG_VER=8.4.2-worker
 
 FROM $BASE_IMG_NAME:$BASE_IMG_VER
 
-ARG DOCKER_PHP_EXT_INSTALLER_VER=2.6.4
-ARG COMPOSER_VER=2.8.3
+ARG DOCKER_PHP_EXT_INSTALLER_VER=2.7.8
+ARG COMPOSER_VER=2.8.4
+ARG PHP_EXT_PCOV_VER=1.0.12
 
 ARG WORKSPACE_USER=kore
 
@@ -21,6 +22,7 @@ RUN mkdir -p /var/log/supervisor \
     && chown ${WORKSPACE_USER}:${WORKSPACE_USER} /var/log/supervisor/*.log \
     && curl -sSL https://github.com/mlocati/docker-php-extension-installer/releases/download/${DOCKER_PHP_EXT_INSTALLER_VER}/install-php-extensions -o - | sh -s \
       @composer-${COMPOSER_VER} \
+      pcov-${PHP_EXT_PCOV_VER} \
     && su -c 'composer global install' - ${WORKSPACE_USER} \
     && apk update && apk add --no-cache \
     curl \
@@ -40,7 +42,8 @@ RUN mkdir -p /var/log/supervisor \
     zsh \
     && mkdir -p /home/${WORKSPACE_USER}/.vscode-server \
     && chown -R ${WORKSPACE_USER}:${WORKSPACE_USER} /home/${WORKSPACE_USER}/.vscode-server \
-    && sed -i -e 's/bin\/ash/bin\/zsh/' /etc/passwd
+    && sed -i -e 's/bin\/ash/bin\/zsh/' /etc/passwd && \
+    && echo "pcov.enabled=0" >> /usr/local/etc/php/conf.d/docker-php-ext-pcov.ini
 
 ENTRYPOINT ["/usr/bin/supervisord", "-n", "-c",  "/etc/supervisord.conf"]
 
